--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- bootstrap css -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <!-- Bootstrap CSS -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+     <!-- Font awesome -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+ 
+     <!-- Bootstrap JS -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- Bootstrap Js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,5 +50,40 @@
           </div>
         </div>
       </nav>
+      <section id="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1 class="promo-title">Hello World!!</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quaerat odio iusto fugiat placeat omnis aperiam, nulla iure est distinctio iste explicabo hic consectetur incidunt doloremque reprehenderit vero? Reprehenderit, unde.</p>
+                    <button type="button" class="btn btn-primary">Know More <i class="fa-solid fa-angles-right"></i></button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="maincont">
+        <div class="container">
+          <div class="row">
+          <div class="col-md-4 maincont">
+            <h1>Heading</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt accusantium est iste nemo quasi officia error alias eum tempora odio aspernatur ut voluptates consectetur, doloribus veritatis repudiandae distinctio optio consequatur.</p>
+            <button type="button" class="btn btn-secondary">Know More <i class="fa-solid fa-angles-right"></i></button>
+        </div>
+          <div class="col-md-4 maincont">
+            <h1>Heading</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt accusantium est iste nemo quasi officia error alias eum tempora odio aspernatur ut voluptates consectetur, doloribus veritatis repudiandae distinctio optio consequatur.</p>
+            <button type="button" class="btn btn-secondary">Know More <i class="fa-solid fa-angles-right"></i></button>
+        </div>
+          <div class="col-md-4 maincont">
+            <h1>Heading</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt accusantium est iste nemo quasi officia error alias eum tempora odio aspernatur ut voluptates consectetur, doloribus veritatis repudiandae distinctio optio consequatur.</p>
+            <button type="button" class="btn btn-secondary">Know More <i class="fa-solid fa-angles-right"></i></button>
+        </div>
+        </div>
+      </div>
+      <hr>
+        <p class="copyright">copyright @ 2024</p>
+      </div>
+      </section>
 </body>
 </html>
